# mongodb-backup

./: .dockerignore  .gitignore  Dockerfile  README.md  backup.py  backup.sh  deployment.yaml  dev.Dockerfile  devspace.yaml  devspace_start.sh  pyproject.toml  rclone.Dockerfile  upload_to_s3.py
.swm/: mongodb-backup.ot9xt.sw.md  swimm.json
rclone/: rclone.py
rclone/rclone_config/: http.py  rclone_config.py  s3.py  storage_system.py
