[tool.poetry]
name = "mongodb-backup"
version = "0.1.0"
description = ""
authors = ["Ido Gada <igada@akamai.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.48"
atlasapi = "^2.0.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
